        * Search backend in all @INC directories (useful for dev)
        * Reduced indentation of generated Perl files.
        * NonWarpableElement: added replace_follow parameter 
         (TODO: depend on Config::Model 1.236)

2011-01-20 Dominique Dumont  <domi.dumont@free.fr> 1.222

        * added migrate_keys_from, undef_is parameters 
        * Above require Config::Model 1.230

2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.221

	* Remove unwanted test package file (oops)

2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.220

	* config-model-edit: use same log4perl config files as config-edit
	* CommonElement: added warn* parameters 
          (require Config::Model 1.228)
        * Fix class deletion issue
        * Adapted model and test to new style of accept specification

2010-10-15 Dominique Dumont  <domi.dumont@free.fr> 1.219

	* removed obsolete push/pop_no_value_check calls 
	* requires Config::Model 1.212

2010-09-16 Dominique Dumont  <domi.dumont@free.fr> 1.218

	* Fixed missing dependencies in Build.PL (Building from hg
	requires Dist::Zilla and Dist-Zilla-Plugins-CJM >= 3.01)

2010-09-14  Dominique Dumont  <domi.dumont@free.fr> 1.217

	* Added allow_keys_matching parameter in ItselfWarpableElement.pl
	(requires Config::Model 1.207)
	* config-model-edit :doc fix
	* Itself.pm: display hash or list cargo type in dot diagram"
	* BackendDetector.pm: Fixed to handle backend names with embedded
	:: (e.g. Debian::Dep5)

2010-08-13  Dominique Dumont  <domi.dumont@free.fr> 1.216

	* Added accept parameter in Itself/Class.pl
	(requires Config::Model 1.206)
	* Build.PL: added dependency on Tk to avoid CPAN smoke test
	failure

2010-04-06  Dominique Dumont  <dominique.dumont@hp.com> 1.215

	* t/itself.t: Fix skip part to avoid failures when X is not
	available.

2010-03-31  Dominique Dumont  <domi.dumont@free.fr> 1.214

	* config-model-edit (): ensure that model modified by loading data
	or YAML is saved later on by the GUI.
