@@ -6,7 +6,7 @@ copyright_holder = Dominique Dumont
 copyright_year = 2011
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.230
+Config::Model    = 1.236
 Log::Log4perl   = 0
 Config::Model::TkUI = 1.210
 Pod::POM        = 0
@@ -14,6 +14,10 @@ YAML::Any       = 0
 
 ; avoid failures on CPAN smoke tests
 Tk              = 0
+
+[Prereqs / BuildRequires]
+Test::More        = 0
+Test::Differences = 0
 
 [@Filter]
 bundle = @Classic
