@@ -25,6 +25,11 @@
 
         'element' => [
 
+            [qw/class_description author copyright license/] => {
+                type       => 'leaf',
+                value_type => 'string',
+            },
+
             'element' => {
                 type       => 'hash',
                 level      => 'important',
@@ -49,11 +54,6 @@
                 type       => 'leaf',
                 value_type => 'reference',
                 refer_to   => '- element',
-            },
-
-            'class_description' => {
-                type       => 'leaf',
-                value_type => 'string',
             },
 
             [qw/write_config_dir read_config_dir/] => {
@@ -95,7 +95,7 @@
             element => "Specify the elements names of this configuration class.",
             include => "Include the specification of another class into this class.",
             include_after => "insert the included elements after a specific element",
-            class_description => "Explain the purpose of this configuration class",
+            class_description => "Explain the purpose of this configuration class. This description will be re-used to generate the documentation of your configuration class",
             read_config => "Specify the Perl class(es) and function(s) used to read configuration data. The specified function will be tried in sequence to get configuration data. ",
             write_config => "Specify the Perl class and function used to write configuration data.",
             generated_by => "When set, this class was generated by some program. You should not edit it as your modification may be clobbered later on",
